# OpenGLRayCastingCore

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: BVHBuilder.h  ModelLoader.h  SDLHelper.h  ShaderProgram.h  TextureGL.h  Utils.h  glad.h
includeGen/: Utils.h.in
shaders/: raytracing.frag  vertex.vert
src/: BVHBuilder.cpp  ModelLoader.cpp  ShaderProgram.cpp  TextureGL.cpp  glad.cpp  main.cpp
